--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>쭈피하기 게임</title>
+
+  <!-- CSS 초기화 -->
+  <link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <button type="button" id="reload" class="reloadBtn">
+    다시 하기!
+  </button>
   <script src="index.js"></script>
 </body>
 </html>
