적군 속도 조절

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <button type="button" id="reload" class="reloadBtn">
     다시 하기!
   </button>
+  <!-- <button type="button" id="start" class="startBtn">
+    시작
+  </button> -->
   <script src="index.js"></script>
 </body>
 </html>
